# libgnomecanvas

./: .cvsignore  .gitignore  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  configure  configure.in  libgnomecanvas-zip.in
demos/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  canvas-arrowhead.c  canvas-curve.c  canvas-features.c  canvas-fifteen.c  canvas-primitives.c  canvas-rich-text.c  canvas.c  canvas_demo.h  dash-demo.c
docs/: Makefile.in
docs/reference/: .cvsignore  Makefile.am  Makefile.in  libgnomecanvas-docs.sgml  libgnomecanvas-sections.txt
docs/reference/tmpl/: .cvsignore  gnome-canvas-bpath.sgml  gnome-canvas-clipgroup.sgml  gnome-canvas-ellipse.sgml  gnome-canvas-group.sgml  gnome-canvas-i18n.sgml  gnome-canvas-item.sgml  gnome-canvas-line.sgml  gnome-canvas-marshal.sgml  gnome-canvas-path-def.sgml  gnome-canvas-pixbuf.sgml  gnome-canvas-polygon.sgml  gnome-canvas-re.sgml  gnome-canvas-rect-ellipse.sgml  gnome-canvas-rect.sgml  gnome-canvas-rich-text.sgml  gnome-canvas-shape.sgml  gnome-canvas-text.sgml  gnome-canvas-util.sgml  gnome-canvas-util.sgml.sgml  gnome-canvas-widget.sgml  gnome-canvas.sgml  libgnomecanvas.sgml
glade/: Makefile.am  Makefile.in  glade-canvas.c
libgnomecanvas/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  gailcanvas.c  gailcanvas.h  gnome-canvas-bpath-private.h  gnome-canvas-bpath.c  gnome-canvas-bpath.h  gnome-canvas-clipgroup.c  gnome-canvas-clipgroup.h  gnome-canvas-line.c  gnome-canvas-line.h  gnome-canvas-path-def.c  gnome-canvas-path-def.h  gnome-canvas-pixbuf.c  gnome-canvas-pixbuf.h  gnome-canvas-polygon.c  gnome-canvas-polygon.h  gnome-canvas-rect-ellipse.c  gnome-canvas-rect-ellipse.h  gnome-canvas-rich-text.c  gnome-canvas-rich-text.h  gnome-canvas-shape-private.h  gnome-canvas-shape.c  gnome-canvas-shape.h  gnome-canvas-text.c  gnome-canvas-text.h  gnome-canvas-util.c  gnome-canvas-util.h  gnome-canvas-widget.c  gnome-canvas-widget.h  gnome-canvas.c  gnome-canvas.h  gnomecanvas-boxed.defs  gnomecanvastypes.c  gp-path.c  libgnomecanvas-2.0.pc.in  libgnomecanvas.h  (+1 more)
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  POTFILES.in  am.po  ang.po  ar.po  as.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  (+48 more)
tests/: .cvsignore  Makefile.am  Makefile.in  test-libglade-canvas.c  test-libglade-canvas.glade
