AC_INIT(libgnomecanvas)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libgnomecanvas2, 1.96.0)

AM_MAINTAINER_MODE

if test -z "$CERTIFIED_GNOMIE"; then
  cat $srcdir/message-of-doom
  exit 1
fi

GNOME_COMMON_INIT
GNOME_PLATFORM_GNOME_2(yes, force)

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL
AC_PROG_YACC
AC_PATH_PROGS(PATH_TO_XRDB, "xrdb")

GNOME_COMPILE_WARNINGS

dnl utility conditional
AM_CONDITIONAL(FALSE, test "x" = "y")

ALL_LINGUAS="az es fr it nn no sv ta tr wa"
AM_GNOME2_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GNOME_COMPILE_WARNINGS(maximum)

dnl Utility conditional
AM_CONDITIONAL(FALSE, test x = y)

dnl
dnl GTK+ check
dnl
GNOME_PKGCONFIG_CHECK_MODULES(GTK, gtk+-2.0:1.3.2)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

dnl
dnl Libart check
dnl
GNOME_PKGCONFIG_CHECK_MODULES(LIBART, libart-2.0:2.1.0)
AC_SUBST(LIBART_CFLAGS)
AC_SUBST(LIBART_LIBS)

dnl
dnl Pango check
dnl
GNOME_PKGCONFIG_CHECK_MODULES(PANGO, pango:0.13 pangoft2:0.13)
AC_SUBST(PANGO_CFLAGS)
AC_SUBST(PANGO_LIBS)

AC_OUTPUT([
Makefile
po/Makefile.in
intl/Makefile
libgnomecanvas/Makefile
libgnomecanvas/libgnomecanvas-2.0.pc
demos/Makefile
])

cat $srcdir/message-of-doom
