AC_PREREQ(2.52)
AC_INIT(libgnomecanvas)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libgnomecanvas2, 1.100.0)

AM_MAINTAINER_MODE

if test -z "$CERTIFIED_GNOMIE"; then
  cat $srcdir/message-of-doom
  exit 1
fi

GNOME_COMMON_INIT
GNOME_PLATFORM_GNOME_2(yes, force)

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL
AC_PROG_YACC
AC_PATH_PROGS(PATH_TO_XRDB, "xrdb")

GNOME_COMPILE_WARNINGS

dnl utility conditional
AM_CONDITIONAL(FALSE, test "x" = "y")

ALL_LINGUAS="az es fr it nn no ru sv ta tr wa"
AM_GLIB_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GNOME_COMPILE_WARNINGS(maximum)

dnl Utility conditional
AM_CONDITIONAL(FALSE, test x = y)

dnl
dnl GTK+ check
dnl
PKG_CHECK_MODULES(LIBGNOMECANVAS, gtk+-2.0 >= 1.3.2 libart-2.0 >= 2.3.5 pango >= 0.13 pangoft2 >= 0.13)
AC_SUBST(LIBGNOMECANVAS_CFLAGS)
AC_SUBST(LIBGNOMECANVAS_LIBS)

AC_OUTPUT([
Makefile
po/Makefile.in
libgnomecanvas/Makefile
libgnomecanvas/libgnomecanvas-2.0.pc
demos/Makefile
])

cat $srcdir/message-of-doom
